R2.1.0         Jan 29, 2020
               build against cpsw/framework R4.4.1 and buildroot-2019.08

R2.0.0         Nov 22, 2019
               Support multiple ATCA blades (backward-compatible mode and named_root)

R1.1.5         Oct. 28, 2019
               build with cpsw/framework R4.3.1

R1.1.4         Sep 20, 2019
               build with cpsw/framework R4.2.0

R1.1.3         June 25, 2018
               build with cpsw/framework R4.1.2

R1.1.2         November 8, 2018
               Update boost and yaml-cpp version to match cpsw R3.6.6

R1.1.1         September 18, 2018
               Build against cpsw 3.6.6

R1.1.0         March 21, 2018

               New-style EPICS_BASE definition in RELEASE.local
               Added RELEASE_SITE to .gitignore (no longer managed by git)
               new-style configure/RELEASE / configure/RELEASE.local
               new-style configure/RELEASE
               use cpsw version R3.6.3
               RELEASE: removed reference to linux kernel modules (not needed)
               Makefile: removed std=c++0x; replaced -I$(VAR) by $(addprefix -I,$(VAR))

               ... this expands to an empty string if VAR is empty (the original version to '-I'
               which can be harmful)


R1.0.3          May 8, 2017
                Build against cpsw R3.5.4

R1.0.2          May 5, 2017
                Null string exception for epics ioc shell (no argument or missing argument)
                Expose API functions to user
                
R1.0.1          April 5, 2017
                Test yaml location directory and pass NULL if it is empty string

R1.0.0          March 21, 2017
                Intial release for yamlLoader driver

March 20, 2017  Kukhee Kim (KHKIM)    Initial work for yamlLoader driver